Bug 1705449: Set placeholder opacity to make the contrast stronger.r=mak
Differential Revision: https://phabricator.services.mozilla.com/D112301

--- a/browser/themes/shared/urlbar-searchbar.inc.css
+++ b/browser/themes/shared/urlbar-searchbar.inc.css
@@ -1072,11 +1072,9 @@ moz-input-box > menupopup .context-menu-add-engine > .menu-iconic-left::after {
   opacity: 1;
 }
 
-/* Set opacity of placeholder for urlbar and searchbar in dark mode during
-   focusing on to make the contrast stronger */
 @media (-moz-proton) {
-:root[lwt-toolbar-field-focus-brighttext] #urlbar[focused="true"] #urlbar-input::placeholder,
-:root[lwt-toolbar-field-focus-brighttext] #searchbar:focus-within .searchbar-textbox::placeholder {
-  opacity: 1;
+#urlbar-input::placeholder,
+.searchbar-textbox::placeholder {
+  opacity: 0.69;
 }
-}
+} /*** END !proton ***/
